@@ -1,4 +1,0 @@
-Site URL: https://www.amateurcool.com/
-Contact: https://www.amateurcool.com/contact
-DMCA email: dmca@amateurcool.com
-Report video: https://www.amateurcool.com/action.php?action=reportVideo&id=0
