@@ -5,3 +5,4 @@
 - aagmaalpro - domain change
 - speedporn - fix thumbnail
 - xhamster - fix listing, channels, lenght filter
+- amateurcool - removed
